--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint src",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "deploy": "cd build && surge"
   },
   "devDependencies": {
     "eslint": "4.9.0",
@@ -33,7 +34,8 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "7.4.0"
+    "eslint-plugin-react": "7.4.0",
+    "surge": "^0.19.0"
   },
   "lint-staged": {
     "*.{js,json,css}": [
