--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "precommit": "lint-staged",
-    "deploy": "cd build && surge"
+    "deploy":
+      "copy build/index.html build/200.html && surge build/ foreign-exchange.surge.sh"
   },
   "devDependencies": {
     "eslint": "4.9.0",
@@ -38,10 +39,7 @@
     "surge": "^0.19.0"
   },
   "lint-staged": {
-    "*.{js,json,css}": [
-      "prettier --write",
-      "git add"
-    ]
+    "*.{js,json,css}": ["prettier --write", "git add"]
   },
   "prettier": {
     "singleQuote": true,
